-- CampusEnroll HA
-- Authoritative PostgreSQL schema for the Base de Datos II deliverable.
-- This script keeps the implemented domains normalized, even where local
-- Hibernate behavior still uses helper persistence details.

BEGIN;

DROP TABLE IF EXISTS billings CASCADE;
DROP TABLE IF EXISTS enrollments CASCADE;
DROP TABLE IF EXISTS schedule_blocks CASCADE;
DROP TABLE IF EXISTS section_schedule_blocks CASCADE;
DROP TABLE IF EXISTS sections CASCADE;
DROP TABLE IF EXISTS academic_periods CASCADE;
DROP TABLE IF EXISTS courses CASCADE;
DROP TABLE IF EXISTS students CASCADE;

CREATE TABLE students (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    student_code VARCHAR(50) NOT NULL,
    first_name VARCHAR(100) NOT NULL,
    last_name VARCHAR(100) NOT NULL,
    email VARCHAR(255),
    active BOOLEAN NOT NULL,
    CONSTRAINT uq_students_student_code UNIQUE (student_code),
    CONSTRAINT ck_students_student_code_not_blank CHECK (btrim(student_code) <> ''),
    CONSTRAINT ck_students_student_code_trimmed CHECK (student_code = btrim(student_code)),
    CONSTRAINT ck_students_first_name_not_blank CHECK (btrim(first_name) <> ''),
    CONSTRAINT ck_students_first_name_trimmed CHECK (first_name = btrim(first_name)),
    CONSTRAINT ck_students_last_name_not_blank CHECK (btrim(last_name) <> ''),
    CONSTRAINT ck_students_last_name_trimmed CHECK (last_name = btrim(last_name)),
    CONSTRAINT ck_students_email_not_blank CHECK (email IS NULL OR btrim(email) <> ''),
    CONSTRAINT ck_students_email_trimmed CHECK (email IS NULL OR email = btrim(email))
);

CREATE TABLE courses (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    course_code VARCHAR(30) NOT NULL,
    name VARCHAR(120) NOT NULL,
    credits INTEGER NOT NULL,
    active BOOLEAN NOT NULL,
    CONSTRAINT uq_courses_course_code UNIQUE (course_code),
    CONSTRAINT ck_courses_course_code_not_blank CHECK (btrim(course_code) <> ''),
    CONSTRAINT ck_courses_course_code_trimmed CHECK (course_code = btrim(course_code)),
    CONSTRAINT ck_courses_name_not_blank CHECK (btrim(name) <> ''),
    CONSTRAINT ck_courses_name_trimmed CHECK (name = btrim(name)),
    CONSTRAINT ck_courses_credits_nonnegative CHECK (credits >= 0)
);

CREATE TABLE academic_periods (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(120) NOT NULL,
    active BOOLEAN NOT NULL,
    CONSTRAINT ck_academic_periods_name_not_blank CHECK (btrim(name) <> ''),
    CONSTRAINT ck_academic_periods_name_trimmed CHECK (name = btrim(name))
);

CREATE TABLE sections (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    section_code VARCHAR(30) NOT NULL,
    capacity INTEGER NOT NULL,
    active BOOLEAN NOT NULL,
    course_id BIGINT NOT NULL,
    academic_period_id BIGINT NOT NULL,
    CONSTRAINT uq_sections_period_section_code UNIQUE (academic_period_id, section_code),
    CONSTRAINT fk_sections_course
        FOREIGN KEY (course_id)
        REFERENCES courses (id)
        ON UPDATE RESTRICT
        ON DELETE RESTRICT,
    CONSTRAINT fk_sections_academic_period
        FOREIGN KEY (academic_period_id)
        REFERENCES academic_periods (id)
        ON UPDATE RESTRICT
        ON DELETE RESTRICT,
    CONSTRAINT ck_sections_section_code_not_blank CHECK (btrim(section_code) <> ''),
    CONSTRAINT ck_sections_section_code_trimmed CHECK (section_code = btrim(section_code)),
    CONSTRAINT ck_sections_capacity_positive CHECK (capacity > 0)
);

-- The service already requires one or more schedule blocks per section.
-- That aggregate-level minimum is intentionally left in the service layer here
-- to avoid trigger-based enforcement in this course deliverable.
CREATE TABLE schedule_blocks (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    section_id BIGINT NOT NULL,
    block_order INTEGER NOT NULL,
    day_of_week VARCHAR(16) NOT NULL,
    start_time TIME NOT NULL,
    end_time TIME NOT NULL,
    CONSTRAINT uq_schedule_blocks_section_order UNIQUE (section_id, block_order),
    CONSTRAINT fk_schedule_blocks_section
        FOREIGN KEY (section_id)
        REFERENCES sections (id)
        ON UPDATE RESTRICT
        ON DELETE CASCADE,
    CONSTRAINT ck_schedule_blocks_order_nonnegative CHECK (block_order >= 0),
    CONSTRAINT ck_schedule_blocks_day_of_week CHECK (
        day_of_week IN (
            'MONDAY',
            'TUESDAY',
            'WEDNESDAY',
            'THURSDAY',
            'FRIDAY',
            'SATURDAY',
            'SUNDAY'
        )
    ),
    CONSTRAINT ck_schedule_blocks_time_range CHECK (end_time > start_time)
);

CREATE TABLE enrollments (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    student_id BIGINT NOT NULL,
    section_id BIGINT NOT NULL,
    status VARCHAR(20) NOT NULL,
    enrolled_at TIMESTAMPTZ NOT NULL,
    CONSTRAINT fk_enrollments_student
        FOREIGN KEY (student_id)
        REFERENCES students (id)
        ON UPDATE RESTRICT
        ON DELETE RESTRICT,
    CONSTRAINT fk_enrollments_section
        FOREIGN KEY (section_id)
        REFERENCES sections (id)
        ON UPDATE RESTRICT
        ON DELETE RESTRICT,
    CONSTRAINT ck_enrollments_status CHECK (status IN ('ENROLLED', 'CANCELLED'))
);

CREATE TABLE billings (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    enrollment_id BIGINT NOT NULL,
    amount NUMERIC(12, 2) NOT NULL,
    currency VARCHAR(10) NOT NULL,
    status VARCHAR(20) NOT NULL,
    created_at TIMESTAMPTZ NOT NULL,
    CONSTRAINT fk_billings_enrollment
        FOREIGN KEY (enrollment_id)
        REFERENCES enrollments (id)
        ON UPDATE RESTRICT
        ON DELETE RESTRICT,
    CONSTRAINT ck_billings_amount_positive CHECK (amount > 0),
    CONSTRAINT ck_billings_currency_not_blank CHECK (btrim(currency) <> ''),
    CONSTRAINT ck_billings_currency_trimmed CHECK (currency = btrim(currency)),
    CONSTRAINT ck_billings_status CHECK (status IN ('PENDING', 'PAID', 'CANCELLED'))
);

CREATE INDEX idx_students_active ON students (active);

CREATE INDEX idx_courses_active ON courses (active);
CREATE UNIQUE INDEX uq_courses_course_code_ci ON courses (LOWER(course_code));

CREATE INDEX idx_academic_periods_active ON academic_periods (active);

CREATE INDEX idx_sections_course_id ON sections (course_id);
CREATE INDEX idx_sections_academic_period_id ON sections (academic_period_id);
CREATE INDEX idx_sections_active ON sections (active);

CREATE INDEX idx_schedule_blocks_section_id ON schedule_blocks (section_id);

CREATE INDEX idx_enrollments_student_id ON enrollments (student_id);
CREATE INDEX idx_enrollments_section_id ON enrollments (section_id);
CREATE INDEX idx_enrollments_status ON enrollments (status);
CREATE INDEX idx_enrollments_enrolled_at ON enrollments (enrolled_at);

-- Allow historical cancelled records while preventing duplicate active
-- enrollments for the same student and section.
CREATE UNIQUE INDEX uq_enrollments_active_student_section
    ON enrollments (student_id, section_id)
    WHERE status = 'ENROLLED';

CREATE INDEX idx_billings_enrollment_id ON billings (enrollment_id);
CREATE INDEX idx_billings_status ON billings (status);
CREATE INDEX idx_billings_created_at ON billings (created_at DESC);

-- The billing service currently uses a helper field in local JPA behavior.
-- The authoritative relational model uses the business rule directly.
CREATE UNIQUE INDEX uq_billings_pending_enrollment
    ON billings (enrollment_id)
    WHERE status = 'PENDING';

-- Notification persistence is intentionally omitted for now because the
-- notification service is still scaffold-only in this repository.

COMMIT;
